--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "typeRoots": ["node_modules/@types", "node_modules/@angular"],
-    "baseUrl": "./",
+    "types": ["node", "cli", "angular-material", "angular"],
+    "baseUrl": ".",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
