--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "typeRoots": ["node_modules/@types", "node_modules/@angular"],
-    "types": ["node", "cli", "angular-material", "angular"],
-    "baseUrl": ".",
+    // "typeRoots": ["node_modules/@types"],
+    // "types": ["node", "cli", "angular-material", "angular"],
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
