--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.2",
-    "@angular/cli": "~13.0.2",
+    "@angular-devkit/build-angular": "~13.1.0-next.2",
+    "@angular/cli": "~13.1.0-next.2",
     "@angular/compiler-cli": "~13.0.0",
     "@types/angular-material": "^1.1.73",
     "@types/cli": "^0.11.20",
